Fix alignment in sequencerControls.scss.

--- a/source/scss/general.scss
+++ b/source/scss/general.scss
@@ -5,6 +5,7 @@
 input {
 	-webkit-user-select: auto;
 	color: #3F3F3F;
+	margin: 0;
 }
 
 html {
